<resources>
    <string name="app_name">Numberdroid</string>
    <string name="btn_start">Start game</string>
    <string name="btn_bonus">Daily bonus</string>
    <string name="btn_results">Results</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_about">About</string>
    <string name="text_university">Kaunas University of Technology</string>
    <string name="text_faculty">Faculty of Informatics</string>
    <string name="text_module">P175B156 Smart devices development</string>
    <string name="text_name">Gabija Subaciute IF-7/1</string>
    <string-array name="difficulty_items">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Impossible</item>
    </string-array>
    <string name="text_playername">Player Name</string>
    <string name="text_playerage">Player age</string>
    <string name="switch_sound">Sound</string>
    <string name="btn_saveSettings">Save</string>
    <string name="number_range_format">Guess a number in range %d to %d</string>
    <string name="turns_format">Turn %d of %d</string>
    <string name="result_format">Guessed number was %d and it was too %s.</string>
    <string name="result_high">high</string>
    <string name="result_low">low</string>
    <string name="btn_guess">Guess!</string>
    <string name="text_win">You win!!! :P</string>
    <string name="text_lose">You lose! :(</string>
    <string name="text_results_id">ID</string>
    <string name="text_results_name">Name</string>
    <string name="text_results_difficulty">Level</string>
    <string name="text_results_turns">Turns</string>
</resources>
